test/functions/deitz/test_invalid_return_array_type.chpl
proc f() {
  return [1..3] int;
}

writeln(f());
